--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body.darkTheme {
 }
 
 .profilePerfil img {
-  width: 75px;
+  width: 120px;
 }
 
 .profileBorder {
@@ -472,6 +472,10 @@ body.darkTheme {
   .skillsBox {
     column-gap: 1rem;
   }
+
+  .profilePerfil img {
+    width: 75px;
+  }
 }
 
 /*for medium devices*/
@@ -485,6 +489,7 @@ body.darkTheme {
     width: 332px;
     margin: 3rem auto;
   }
+
 }
 
 @media screen and (min-width: 776px) {
